--- a/register.html
+++ b/register.html
@@ -26,17 +26,22 @@
         <div class="container">
             <h1>Register to MSHS-SM Canteen</h1>
             <form id="registrationForm">
-            <label for="lrn">Learning Number (LRN):</label>
-            <input type="text" id="lrn" name="lrn" required>
+															<label for="firstName">First Name:</label>
+															<input type="text" id="firstName" name="firstName" required>
 
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+															<label for="lastName">Last Name:</label>
+															<input type="text" id="lastName" name="lastName" required>
 
-            <button type="submit">Register</button>
-            <div id="errorDiv" style="color: red;"></div>
-            <div id="successDiv" style="color: green;"></div>
-            </form>
-            
+															<label for="lrn">Learning Number (LRN):</label>
+															<input type="text" id="lrn" name="lrn" required>
+
+															<label for="password">Password:</label>
+															<input type="password" id="password" name="password" required>
+
+															<button type="submit">Register</button>
+															
+															<div id="errorDiv" style="color: red;"></div>
+															<div id="successDiv" style="color: green;"></div>
         </div>
     </main>
 
