--- a/register.html
+++ b/register.html
@@ -26,22 +26,23 @@
         <div class="container">
             <h1>Register to MSHS-SM Canteen</h1>
             <form id="registrationForm">
-															<label for="firstName">First Name:</label>
-															<input type="text" id="firstName" name="firstName" required>
+		<label for="firstName">First Name:</label>
+		<input type="text" id="firstName" name="firstName" required>
 
-															<label for="lastName">Last Name:</label>
-															<input type="text" id="lastName" name="lastName" required>
+		<label for="lastName">Last Name:</label>
+		<input type="text" id="lastName" name="lastName" required>
 
-															<label for="lrn">Learning Number (LRN):</label>
-															<input type="text" id="lrn" name="lrn" required>
+		<label for="lrn">Learning Number (LRN):</label>
+		<input type="text" id="lrn" name="lrn" required>
 
-															<label for="password">Password:</label>
-															<input type="password" id="password" name="password" required>
+		<label for="password">Password:</label>
+		<input type="password" id="password" name="password" required>
 
-															<button type="submit">Register</button>
-															
-															<div id="errorDiv" style="color: red;"></div>
-															<div id="successDiv" style="color: green;"></div>
+		<button type="submit">Register</button>
+		
+		<div id="errorDiv" style="color: red;"></div>
+		<div id="successDiv" style="color: green;"></div>
+		<div id="loadingDiv" style="display:none;">Loading...</div>
         </div>
     </main>
 
