--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
 		<label for="password">Password:</label>
 		<input type="password" id="password" name="password" required>
 
-		<button type="submit">Register</button>
+		<button id="submitButton" type="submit">Register</button>
 		
 		<div id="errorDiv" style="color: red;"></div>
 		<div id="successDiv" style="color: green;"></div>
