--- a/register.html
+++ b/register.html
@@ -25,24 +25,16 @@
     <main>
         <div class="container">
             <h1>Register to MSHS-SM Canteen</h1>
-            <form id="registrationForm">
-		<label for="firstName">First Name:</label>
-		<input type="text" id="firstName" name="firstName" required>
-
-		<label for="lastName">Last Name:</label>
-		<input type="text" id="lastName" name="lastName" required>
-
-		<label for="lrn">Learning Number (LRN):</label>
-		<input type="text" id="lrn" name="lrn" required>
-
-		<label for="password">Password:</label>
-		<input type="password" id="password" name="password" required>
-
-		<button id="submitButton" type="submit">Register</button>
-		
+		<form id="registrationForm">
+		    <input type="text" id="firstName" placeholder="First Name" required />
+		    <input type="text" id="lastName" placeholder="Last Name" required />
+		    <input type="text" id="lrn" placeholder="LRN" required />
+		    <input type="password" id="password" placeholder="Password" required />
+		    <button type="submit" id="submitButton">Register</button>
+		</form>
 		<div id="errorDiv" style="color: red;"></div>
 		<div id="successDiv" style="color: green;"></div>
-		<div id="loadingDiv" style="display:none;">Loading...</div>
+		<div id="loadingDiv" style="display: none;">Loading...</div>
         </div>
     </main>
 
