--- a/basic.html
+++ b/basic.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BASIC</title>
+    <link rel="icon" href="school-logo-removebg-preview.png" type="image/png">
 </head>
 <body>
     <header>
