--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <title>Registration</title>
     <link rel="stylesheet" href="basic.css">
     <link rel="stylesheet" href="register.css">
+    <link rel="icon" href="school-logo-removebg-preview.png" type="image/png">
 </head>
 <body>
     <header>
