--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
 
     <footer>
         <div>
-          <a href="login.html">Login</a>
+          <a href="index.html">Login</a>
         </div>
     </footer>     
     
