--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <input type="password" id="password" required>
                 <button type="submit">Login</button>
                 <div id="message"></div>
+                <div id="loading" style="display:none;">Loading...</div>
             </form>            
         </div>
     </main>
