--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="container">
-            <h1 class="header">Registration Form</h1>
+            <h1 class="header">Registration</h1>
             <form id="registerForm">
                 <label for="firstName">First Name:</label>
                 <input type="text" id="firstName" name="firstName" required><br>
