--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
                 <input type="text" id="lastName" name="lastName" required><br>
         
                 <label for="lrn">LRN:</label>
-                <input type="text" id="lrn" name="lrn" required><br>
+                <input type="text" id="lrn" name="lrn" maxlength="15" minlength="10" required><br>
         
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required><br>
