--- a/staff.html
+++ b/staff.html
@@ -78,7 +78,7 @@
         <a href="#claimed">Claimed</a>
     </div>
     <div>
-        <a href="login.html">Logout</a>
+        <a href="index.html">Logout</a>
     </div>
   </footer> 
     <script src="staff.js"></script>
