--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <form id="loginForm">
             <div>
             <label>
-                <input type="radio" name="userType" value="customers" checked> Customer
+                <input type="radio" name="userType" value="customer" checked> Customer
             </label>
             <label>
-                <input type="radio" name="userType" value="staffs"> Staff
+                <input type="radio" name="userType" value="staff"> Staff
             </label>              
             </div>
 
