--- a/myOrders.html
+++ b/myOrders.html
@@ -4,13 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Orders</title>
-    <link rel="stylesheet" href="myOrders.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="basic.css">
+    <link rel="stylesheet" href="myOrders.css">
+    <link rel="icon" href="school-logo-removebg-preview.png" type="image/png">
 </head>
 <body>
-    <div id="orders-container">
-        <h1>My Orders</h1>
-        <div id="orders-list"></div>
-    </div>
-    <script src="myOrders.js"></script> <!-- Link to your JavaScript file -->
+    <header>
+      <div class="iname">
+        DIGITAL
+      </div>
+  
+      <div class="logo">
+        <a href="website.html"><img src="school-logo.png"></a>
+      </div>
+  
+      <div class="iname">
+        CANTEEN
+      </div>
+    </header>
+    
+    <main>
+        <div class="container">
+            <div id="orders-container">
+                <h1>My Orders</h1>
+                <div id="orders-list"></div>
+            </div>
+        </div>
+    </main>
+    
+    <footer>
+      <div>
+        <a href="order.html">Order</a>
+      </div>
+  
+      <div>
+        Logout
+      </div>
+  </footer> 
+    <script src="myOrders.js"></script>
 </body>
 </html>
