--- a/order.html
+++ b/order.html
@@ -77,6 +77,10 @@
         </div>
 
         <div>
+            <a href="myOrders.html">My Orders</a>
+        </div>        
+
+        <div>
             <a href="index.html">Logout</a>
         </div>
     </footer> 
