--- a/order.html
+++ b/order.html
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-            <a href="myOrders.html">My Orders</a>
+            <a href="myOrders.html">Orders</a>
         </div>        
 
         <div>
