--- a/myOrders.html
+++ b/myOrders.html
@@ -25,9 +25,14 @@
     
     <main>
         <div class="container">
-            <div id="orders-container">
-                <h1>My Orders</h1>
-                <div id="orders-list"></div>
+            <div class="header">
+                My Orders             
+            </div>
+
+            <div class="body">
+                <div id="orders-list">
+                  <!-- Orders Will Go Here -->
+                </div>              
             </div>
         </div>
     </main>
@@ -36,9 +41,9 @@
       <div>
         <a href="order.html">Order</a>
       </div>
-  
+
       <div>
-        Logout
+        <a href="index.html">Logout</a>
       </div>
   </footer> 
     <script src="myOrders.js"></script>
