--- a/staff.html
+++ b/staff.html
@@ -28,7 +28,7 @@
         
             <div id="pendingContainer" class="order-container">
               <div class="header">
-                <h2 class="heading">Pending Orders</h2>
+                Pending Orders
               </div>
 
               <div class="body">
@@ -42,7 +42,7 @@
         
             <div id="readyContainer" class="order-container">
               <div class="header">
-                <h2 class="heading">Ready Orders</h2>
+                Ready Orders
               </div>
 
               <div class="body">
@@ -56,7 +56,7 @@
 
             <div id="claimedContainer" class="order-container">
               <div class="header">
-                <h2 class="heading">ClaimedOrders<h2>                
+                ClaimedOrders               
               </div>
 
               <div class="body">
