--- a/order.html
+++ b/order.html
@@ -7,19 +7,7 @@
     <link rel="stylesheet" href="basic.css">
     <link rel="stylesheet" href="order.css">
     <link rel="icon" href="school-logo-removebg-preview.png" type="image/png">
-    <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-    <script>
-    window.OneSignalDeferred = window.OneSignalDeferred || [];
-    OneSignalDeferred.push(async function(OneSignal) {
-        await OneSignal.init({
-        appId: "0bcb5020-79f2-470f-b432-04c6d101b4b0",
-        safari_web_id: "web.onesignal.auto.4715199e-f86d-44ca-99ff-a9854a17e932",
-        notifyButton: {
-            enable: true,
-        },
-        });
-    });
-    </script>
+    <script src="app.js"></script>
 </head>
 <body>
     <header>
