--- a/staff.html
+++ b/staff.html
@@ -85,6 +85,9 @@
         <a href="#claimed">Claimed</a>
     </div>
     <div>
+      <a href="manageStock.html">Stock</a>
+    </div> 
+    <div>
         <a href="index.html">Logout</a>
     </div>
   </footer> 
