--- a/manageStock.html
+++ b/manageStock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BASIC</title>
+    <title>STOCK</title>
     <link rel="icon" href="school-logo-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="basic.css">
     <link rel="stylesheet" href="manageStock.css">
